# FileMonitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  compile_debug.bat  compile_release.bat
src/: file_monitor.cpp  socket_server.cpp
src/common/: id_utils.h  socket_utils.cpp  socket_utils.h  string_utils.h
